Fix overflow issue in mobile devices

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ p {
   padding: 2em;
   position: relative;
   isolation: isolate;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .container {
